theaa-prod/force-app/main/default/objects/Internal_Governance__c/Internal_Governance__c.object-meta.xml
<CustomObject>
    <description>Governance object to support management of internal mechanics relating to Opportunities/Bid Processes</description>
    <label>Internal Governance</label>
    <nameField>
        <displayFormat>IG-{DD}/{MM}/{YYYY}-{000}</displayFormat>
        <label>Governance Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Internal Governance</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>