theaa-prod/force-app/main/default/objects/Internal_Governance__c/fields/BidNo_Bid_Desicion__c.field-meta.xml
<CustomField>
    <fullName>BidNo_Bid_Desicion__c</fullName>
    <inlineHelpText>Captures the date the Bid/No Bid Decision was made</inlineHelpText>
    <label>Bid/No Bid Decision</label>
    <type>DateTime</type>
</CustomField>