theaa-prod/force-app/main/default/objects/Internal_Governance__c/fields/BidNo_Bid_Status__c.field-meta.xml
<CustomField>
    <fullName>BidNo_Bid_Status__c</fullName>
    <inlineHelpText>Enter whether the decision was made to move forward with the proposed business</inlineHelpText>
    <label>Bid/No Bid Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bid - Proceed</fullName>
            </value>
            <value>
                <fullName>No Bid - Reject</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>