theaa-prod/force-app/main/default/objects/Internal_Governance__c/fields/Commercial_Test__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Test__c</fullName>
    <inlineHelpText>Captures the date the Commercial Test was done</inlineHelpText>
    <label>Commercial Test</label>
    <type>DateTime</type>
</CustomField>