theaa-prod/force-app/main/default/objects/Internal_Governance__c/fields/Detailed_Test_Approved__c.field-meta.xml
<CustomField>
    <fullName>Detailed_Test_Approved__c</fullName>
    <inlineHelpText>Captures the date the Detailed Test was complete &amp; approved</inlineHelpText>
    <label>Detailed Test Approved</label>
    <type>DateTime</type>
</CustomField>