theaa-prod/force-app/main/default/objects/Internal_Governance__c/fields/Doabilitity_Approved__c.field-meta.xml
<CustomField>
    <fullName>Doabilitity_Approved__c</fullName>
    <inlineHelpText>Captures the date the Doability check was approved</inlineHelpText>
    <label>Doabilitity Approved</label>
    <type>DateTime</type>
</CustomField>