theaa-prod/force-app/main/default/objects/Internal_Governance__c/fields/Governance_Stage__c.field-meta.xml
<CustomField>
    <fullName>Governance_Stage__c</fullName>
    <label>Governance Stage</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GEC Strategic Test</fullName>
                <default>true</default>
                <label>GEC Strategic Test</label>
            </value>
            <value>
                <fullName>Bid/No Bid</fullName>
            </value>
            <value>
                <fullName>Doability</fullName>
            </value>
            <value>
                <fullName>Deal Forum</fullName>
            </value>
            <value>
                <fullName>Commercial Test</fullName>
            </value>
            <value>
                <fullName>RFP Submission</fullName>
            </value>
            <value>
                <fullName>BAFO Approved</fullName>
                <label>BAFO</label>
            </value>
            <value>
                <fullName>Detailed Test</fullName>
            </value>
            <value>
                <fullName>Legal Test</fullName>
            </value>
            <value>
                <fullName>Contract signed</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>