theaa-prod/force-app/main/default/objects/Internal_Governance__c/fields/Legal_Test_Approved__c.field-meta.xml
<CustomField>
    <fullName>Legal_Test_Approved__c</fullName>
    <inlineHelpText>Captures the date the Legal Test was complete &amp; approved</inlineHelpText>
    <label>Legal Test Approved</label>
    <type>DateTime</type>
</CustomField>