theaa-prod/force-app/main/default/objects/Internal_Governance__c/fields/Related_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Related_Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Related Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Internal Governance</relationshipLabel>
    <relationshipName>Internal_Governance</relationshipName>
    <type>Lookup</type>
</CustomField>