theaa-prod/force-app/main/default/objects/Internal_Governance__c/fields/RFP_Submission__c.field-meta.xml
<CustomField>
    <fullName>RFP_Submission__c</fullName>
    <inlineHelpText>Captures the date the RFP was submitted</inlineHelpText>
    <label>RFP Submission</label>
    <type>DateTime</type>
</CustomField>