theaa-prod/force-app/main/default/objects/Internal_Governance__c/recordTypes/Opportunity_Governance.recordType-meta.xml
<RecordType>
    <fullName>Opportunity_Governance</fullName>
    <active>true</active>
    <description>Record type for internal opportunity governance</description>
    <label>Opportunity Governance</label>
</RecordType>